--- a/css/styles.css
+++ b/css/styles.css
@@ -1,4 +1,5 @@
 @import './buttons.css';
+
 body {
     background-color: #26B4BC;
     font-family:Arial, Helvetica, sans-serif;
@@ -9,9 +10,13 @@ body {
 }
 .player {
     margin-block-start: 100px;
+    /* border: 10px solid red; */
+    position: relative;
 }
 .player video {
     inline-size: 100%;
+    aspect-ratio: 16/9;
+    vertical-align: middle;
 }
 .player-title {
     color:white;
@@ -26,5 +31,15 @@ body {
     justify-content: center;
     align-items: center;
     /* z-index: 2;  PARA PONER ADELANTE EL VIDEO*/
-
+}
+.player-progress {
+    /* background: yellow; */
+    position: absolute;
+    inset-block-end: 0;
+    inset-inline: 0;
+    display: flex;
+    padding: 10px;
+}
+.player-progress input {
+    flex: 1;
 }
