--- a/css/styles.css
+++ b/css/styles.css
@@ -1,7 +1,7 @@
 @import './buttons.css';
 
 body {
-    background-color: #26B4BC;
+    background-color: #F5C2EC;
     font-family:Arial, Helvetica, sans-serif;
 }
 .wrapper {
